test/inventory-qa/stage2/kib-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: inventory-qa
  labels:
    app: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  rules:
    - host: kib-qa.fcaus-te.autodata.tech
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: qa-kib-kb-http
                port:
                  number: 5601
  tls:
    - secretName: fcaus-wildcard
      hosts:
        - kib-qa.fcaus-te.autodata.tech
